force-app/main/default/objects/Automation_Toggles__mdt/Automation_Toggles__mdt.object-meta.xml
<CustomObject>
    <description>Provides capabilities to turn off automation flows.</description>
    <label>Automation Toggle</label>
    <pluralLabel>Automation Toggles</pluralLabel>
</CustomObject>