force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Contract_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contract_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should only Disable Hardware Contract automation</description>
    <inlineHelpText>Should only Disable Hardware Contract automation</inlineHelpText>
    <label>Disable_Contract_Automation</label>
    <type>Checkbox</type>
</CustomField>