force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Hardware_Only_Contrac_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Hardware_Only_Contrac_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Hardware Only Contrac Automation</label>
    <type>Checkbox</type>
</CustomField>