force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Hardware_Only_OrderItem_Auto__c.field-meta.xml
<CustomField>
    <fullName>Disable_Hardware_Only_OrderItem_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should only Disable Hardware Order Item automation</description>
    <label>Disable_Hardware_Only_OrderItem_Auto</label>
    <type>Checkbox</type>
</CustomField>