force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Hardware_Only_Quote_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Hardware_Only_Quote_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should only Disable Hardware Quote automation</description>
    <inlineHelpText>Should only Disable Hardware Quote automation</inlineHelpText>
    <label>Disable_Hardware_Only_Quote_Automation</label>
    <type>Checkbox</type>
</CustomField>