force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Hardware_Only_QuoteLine_Auto__c.field-meta.xml
<CustomField>
    <fullName>Disable_Hardware_Only_QuoteLine_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should only Disable Hardware Quote Line automation</description>
    <inlineHelpText>Should only Disable Hardware Quote Line automation</inlineHelpText>
    <label>Disable_Hardware_Only_QuoteLine_Auto</label>
    <type>Checkbox</type>
</CustomField>