force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_Opportunity_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable_Opportunity_Automation</label>
    <type>Checkbox</type>
</CustomField>