force-app/main/default/objects/Automation_Toggles__mdt/fields/Disable_RLM_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_RLM_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will disable all automation related to RLM</description>
    <label>Disable RLM Automation</label>
    <type>Checkbox</type>
</CustomField>